--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "d3": "^7.8.5",
+    "d3-scale": "^4.0.2",
     "papercss": "^1.9.1",
     "spaper": "^1.0.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "@types/d3": "^7.4.0",
+    "@types/d3-scale": "^4.0.3",
     "svelte": "^3.57.0",
     "vite": "^4.3.2"
   },
-  "homepage":"."
+  "homepage": "."
 }
