--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "spaper": "^1.0.0"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.3.4",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "svelte": "^3.57.0",
     "vite": "^4.3.2"
   },
-  "homepage":"."
+  "homepage": "."
 }
